# Classy-Miso

./: .stylish-haskell.yaml  ChangeLog.md  LICENSE  README.md  classy-miso.cabal  stack.ghcjs.yaml  stack.yaml
app/: Main.hs
script/: depgraph  deploy  test
src/Miso/: Classy.hs
src/Miso/Classy/: App.hs
