name:           classy-miso
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/RobertFischer/Classy-Miso#README.md>
homepage:       https://github.com/RobertFischer/Classy-Miso#README.md
bug-reports:    https://github.com/RobertFischer/Classy-Miso#README.md
author:         Robert Fischer
maintainer:     smokejumperit+stack@gmail.com
copyright:      Robert Fischer
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/RobertFischer/Classy-Miso

Flag Development
  Description: Turn on errors for warnings
  Default:     False
  Manual:      True

library
  hs-source-dirs:
      src
  build-depends:
      base       >= 4.7 && <5
    , miso       >= 0.15 && < 0.16
    , rfc        >= 0.0.0.25 && < 0.1
    , megaparsec >= 6.4 && < 7
    , lens       >= 4.15 && < 5
  if impl(ghcjs)
    build-depends:     aeson
                     , bifunctors
    cpp-options:       -DCLIENT -DGHCJS_BROWSER -DBROWSER
  exposed-modules:     Miso.Classy
  default-language: Haskell2010
  default-extensions:  RebindableSyntax
                     , MonadFailDesugaring
                     , MultiParamTypeClasses
                     , TypeFamilies
                     , TypeFamilyDependencies
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -fno-warn-orphans
  ghc-options:         -fno-max-relevant-binds -fprint-potential-instances -Wno-missing-monadfail-instances
  ghc-options:         -fno-warn-name-shadowing -fno-warn-tabs -Wall-missed-specialisations -Wnoncanonical-monad-instances
  ghc-options:         -Wnoncanonical-monadfail-instances -Wimplicit-prelude -Wmissing-exported-signatures -Widentities
  if flag(Development)
    ghc-options:       -Werror -dcore-lint -dcmm-lint

executable classy-miso-demo
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -fno-warn-orphans
  ghc-options:         -fno-max-relevant-binds -fprint-potential-instances -Wno-missing-monadfail-instances
  ghc-options:         -fno-warn-name-shadowing -fno-warn-tabs -Wall-missed-specialisations -Wnoncanonical-monad-instances
  ghc-options:         -Wnoncanonical-monadfail-instances -Wimplicit-prelude -Wmissing-exported-signatures -Widentities
  if flag(Development)
    ghc-options:       -Werror -dcore-lint -dcmm-lint
  build-depends:
      base >=4.7 && <5
    , classy-miso
    , miso
    , rfc
  default-language: Haskell2010
  default-extensions:  RebindableSyntax
                     , MonadFailDesugaring
                     , MultiParamTypeClasses
                     , TypeFamilies
                     , TypeFamilyDependencies

test-suite ghcjs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , classy-miso
    , miso
    , rfc
  default-language: Haskell2010
